--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Happy Birthday, Dea !</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy Birthday Dea !</title>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <style>
     body {
@@ -36,7 +38,12 @@
     h1 {
       color: #f08080;
       margin-bottom: 10px;
-      font-size: 3em;
+      font-size: 50px;
+    }
+
+    p {
+      color: #87CEFA;
+      font-size: 25px;
     }
 
     .cake {
@@ -57,8 +64,8 @@
 
 <body>
   <div class="birthday-card">
-    <h1>Happy Birthday, Dea !</h1>
-    <p>Wishing you a day filled with joy and happiness.</p>
+    <h1>Happy Birthday Dea !</h1>
+    <p><b>Wishing you a day filled with joy and happiness.</b></p>
     <img src="foto.png"
       alt="Birthday Cake" class="cake">
   </div>
