--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Dea !</title>
+  <title>Happy Birthday</title>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <style>
     body {
@@ -64,7 +64,7 @@
 
 <body>
   <div class="birthday-card">
-    <h1>Happy Birthday Dea !</h1>
+    <h1>Happy Birthday!</h1>
     <p><b>Wishing you a day filled with joy and happiness.</b></p>
     <img src="foto.png"
       alt="Birthday Cake" class="cake">
